Update server railway.toml to use nixpacks

--- a/server/railway.toml
+++ b/server/railway.toml
@@ -1,10 +1,9 @@
 [build]
-builder = "dockerfile"
-dockerfilePath = "../Dockerfile.backend"
+builder = "nixpacks"
 
 [deploy]
 startCommand = "node index.js"
 healthcheckPath = "/api/health"
-healthcheckTimeout = 100
+healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
