--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/local-notifications": "^8.0.0",
     "@turf/turf": "^7.3.1",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
