--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^8.0.0",
     "@capacitor/local-notifications": "^8.0.0",
     "@turf/turf": "^7.3.1",
+    "framer-motion": "^12.31.2",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
